# tulsutest

./: .gitignore  1.1.py  1.3.py  1.5.py  1.py  2.1.py  2.4.py  3.py  5.py  conflict.py  key.txt  key.txt.pub  main.py  numbers.txt  test.py
.github/workflows/: python-ci.yml
.github/workflows~/: python-ci.yml
1(Go)/: main.go  test_task1.py
1.1/: main.py  test.db  untitled.ui
1.3/: main.py  test.db  untitled.ui
1.5/: main.py  test.db  untitled.ui
1.5/static/: style.css
1.5/templates/: index.html
2(Go)/: call.py  main.go  test_task3.py
2.1/: database.py  main.py  shop.db  tasks.db  untitled.ui
2.1/templates/: add.html  edit.html  index.html
2.4/: indexed.db  main.py
2.4/templates/: index.html
8lab/: pyproject.toml
lab/: pyproject.toml
lab/src/lab/: task.py
lab/tests/: test_task.py
